--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "test:watch": "vitest",
     "lint": "eslint src test --ext .ts",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "pnpm build && pnpm test",
-    "example": "cp examples/browser/index.html dist/ && serve dist -p 3000"
+    "prepublishOnly": "pnpm build && pnpm test"
   },
   "keywords": [
     "pdf",
